--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 	orphans: 2;
 	widows: 2;
 }
-@media print{
+@media print {
 	html {
 		--bgcolor: white;
 		--bg-highlights: white;
@@ -28,9 +28,10 @@
 		--body-color: var(--base03);
 		--bold-color: var(--base03);
 		--bolder-color: var(--base03);
-		--boldest-color: var(--base03);	
+		--boldest-color: var(--base03);
 	}
-	
+
+
 	.ui {
 		display: none;
 	}
@@ -60,17 +61,23 @@
 		max-width: 432pt;
 		min-width: 186pt;
 		padding: 26pt 45pt;
-		margin: auto;				
+		margin: auto;
 	}
+
 }
-h2 b, h2 strong {
+h1 b, h1 strong, h2 b, h2 strong, h3 b, h3 strong {
 	font-weight: bolder;
+border-bottom: 1px var(--secondary-color) dotted;
+
 }
 b, strong {
 	color: var(--bolder-color);
 }
 em, i {
-	color: var(--secondary-color);				
+	color: var(--secondary-color);
+}
+h1 em, h1 i, h2 em, h2 i, h3 em, h3 i {
+	color: var(--bolder-color);
 }
 body {
 	color: var(--bold-color);
@@ -105,17 +112,16 @@ h3 {
 }
 h4 {
 	color: var(--bolder-color);
-	font-size: 11pt;
-	font-style: italic;
+	font-size: 10pt;
 }
 h5 {
 	color: var(--bold-color);
-	font-size: 11pt;
+	font-size: 10pt;
 	font-style: italic;
 }
 h6 {
 	color: var(--secondary-color);
-	font-size: 11pt;
+	font-size: 10pt;
 }
 ol,ul {
 	margin: 0;
