--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro&display=swap');
 :root {
 	--base03: #002b36;
@@ -37,7 +36,6 @@
 		display: none;
 	}
 
-
 }
 @media screen {
 	html {
@@ -64,6 +62,34 @@
 		padding: 26pt 45pt;
 		margin: auto;
 	}
+
+	.ui {
+		padding: 0px;
+		margin-bottom: 10px;
+		border-bottom: 1px dashed var(--blue);
+		display: flex;
+    justify-content: space-between;
+	}
+
+  .ui>div {
+    background-color: var(--bg-highlights);
+    padding: 5px;
+  }
+
+  .dropdown {
+    display: none;
+    position: absolute;
+    min-width: 200pt;
+    max-width: 60vw;
+    overflow: auto;
+    background-color: var(--bg-highlights);
+    border: 3px var(--bold-color) solid;
+    z-index: 1;
+  }
+
+  .show {
+    display: block;
+  }
 
 }
 h1 b, h1 strong, h2 b, h2 strong, h3 b, h3 strong {
