--- a/style.css
+++ b/style.css
@@ -1,75 +1,75 @@
 @import url('https://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro&display=swap');
 :root {
-	--base03: #002b36;
-	--base02: #073642;
-	--base01: #586e75;
-	--base00: #657b83;
-	--base0: #839496;
-	--base1: #93a1a1;
-	--base2: #eee8d5;
-	--base3: #fdf6e3;
-	--yellow: #b58900;
-	--orange: #cb4b16;
-	--red: #dc322f;
-	--magenta: #d33682;
-	--violet: #6c71c4;
-	--blue: #268bd2;
-	--cyan: #2aa198;
-	--green: #859900;
-	--title-font: 'Inconsolata', monospace;
-	orphans: 2;
-	widows: 2;
+  --base03: #002b36;
+  --base02: #073642;
+  --base01: #586e75;
+  --base00: #657b83;
+  --base0: #839496;
+  --base1: #93a1a1;
+  --base2: #eee8d5;
+  --base3: #fdf6e3;
+  --yellow: #b58900;
+  --orange: #cb4b16;
+  --red: #dc322f;
+  --magenta: #d33682;
+  --violet: #6c71c4;
+  --blue: #268bd2;
+  --cyan: #2aa198;
+  --green: #859900;
+  --title-font: 'Inconsolata', monospace;
+  orphans: 2;
+  widows: 2;
 }
 @media print {
-	html {
-		--bgcolor: white;
-		--bg-highlights: white;
-		--secondary-color: var(--base02);
-		--body-color: var(--base03);
-		--bold-color: var(--base03);
-		--bolder-color: var(--base03);
-		--boldest-color: var(--base03);
-	}
+  html {
+    --bgcolor: white;
+    --bg-highlights: white;
+    --secondary-color: var(--base02);
+    --body-color: var(--base03);
+    --bold-color: var(--base03);
+    --bolder-color: var(--base03);
+    --boldest-color: var(--base03);
+  }
 
 
-	.ui {
-		display: none;
-	}
+  .ui {
+    display: none;
+  }
 
 }
 @media screen {
-	html {
-		--bgcolor: var(--base3);
-		--bg-highlights: var(--base2);
-		--secondary-color: var(--base1);
-		--body-color: var(--base00);
-		--bold-color: var(--base01);
-		--bolder-color: var(--base02);
-		--boldest-color: var(--base03);
-	}
-	.dark {
-		--bgcolor: var(--base03);
-		--bg-highlights: var(--base02);
-		--secondary-color: var(--base01);
-		--body-color: var(--base0);
-		--bold-color: var(--base1);
-		--bolder-color: var(--base2);
-		--boldest-color: var(--base3);
-	}
-	body {
-		max-width: 432pt;
-		min-width: 186pt;
-		padding: 26pt 45pt;
-		margin: auto;
-	}
+  html {
+    --bgcolor: var(--base3);
+    --bg-highlights: var(--base2);
+    --secondary-color: var(--base1);
+    --body-color: var(--base00);
+    --bold-color: var(--base01);
+    --bolder-color: var(--base02);
+    --boldest-color: var(--base03);
+  }
+  .dark {
+    --bgcolor: var(--base03);
+    --bg-highlights: var(--base02);
+    --secondary-color: var(--base01);
+    --body-color: var(--base0);
+    --bold-color: var(--base1);
+    --bolder-color: var(--base2);
+    --boldest-color: var(--base3);
+  }
+  body {
+    max-width: 432pt;
+    min-width: 186pt;
+    padding: 26pt 45pt;
+    margin: auto;
+  }
 
-	.ui {
-		padding: 0px;
-		margin-bottom: 10px;
-		border-bottom: 1px dashed var(--blue);
-		display: flex;
+  .ui {
+    padding: 0px;
+    margin-bottom: 10px;
+    border-bottom: 1px dashed var(--blue);
+    display: flex;
     justify-content: space-between;
-	}
+  }
 
   .ui>div {
     background-color: var(--bg-highlights);
@@ -93,98 +93,106 @@
 
 }
 h1 b, h1 strong, h2 b, h2 strong, h3 b, h3 strong {
-	font-weight: bolder;
-	border-bottom: 1px var(--secondary-color) dotted;
+  font-weight: bolder;
+  border-bottom: 1px var(--secondary-color) dotted;
 
 }
 b, strong {
-	color: var(--bolder-color);
+  color: var(--bolder-color);
 }
 em, i {
-	color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 h1 em, h1 i, h2 em, h2 i, h3 em, h3 i, h4 em, h4 i {
-	color: var(--bolder-color);
+  color: var(--bolder-color);
 }
 body {
-	color: var(--bold-color);
-	font-size: 10pt;
-	font-family: 'Source Sans Pro', sans-serif;
-	font-style: normal;
-	background-color: var(--bgcolor);
+  color: var(--bold-color);
+  font-size: 10pt;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-style: normal;
+  background-color: var(--bgcolor);
 }
 h2,h3,h4,h5,h6 {
-	padding: 0pt;
-	margin: 1em auto 0.5em auto;
-	page-break-after: avoid;
-	padding-bottom: 0pt;
-	line-height: 1.0;
-	font-weight: bold;
+  padding: 0pt;
+  margin: 1em auto 0.5em auto;
+  page-break-after: avoid;
+  padding-bottom: 0pt;
+  line-height: 1.0;
+  font-weight: bold;
 }
 h1,h2,h3 {
-	font-family: var(--title-font);
+  font-family: var(--title-font);
 }
 h1 + p + h2, h1 + h2,h2 + h3,h3 + h4,h4 + h5,h5 + h6 {
-	margin-top: -0.4em;
+  margin-top: -0.4em;
 }
 h2 {
-	color: var(--orange);
-	font-size: 16pt;
-	border-bottom: solid 1px var(--bolder-color);
-	background-color: var(--bg-highlights);
+  color: var(--orange);
+  font-size: 16pt;
+  border-bottom: solid 1px var(--bolder-color);
+  background-color: var(--bg-highlights);
 }
 h3 {
-	color: var(--boldest-color);
-	font-size: 12pt;
+  color: var(--boldest-color);
+  font-size: 12pt;
 }
 h4 {
-	color: var(--bolder-color);
-	font-size: 10pt;
+  color: var(--bolder-color);
+  font-size: 10pt;
 }
 h5 {
-	color: var(--bold-color);
-	font-size: 10pt;
-	font-style: italic;
+  color: var(--bold-color);
+  font-size: 10pt;
+  font-style: italic;
 }
 h6 {
-	color: var(--secondary-color);
-	font-size: 10pt;
+  color: var(--secondary-color);
+  font-size: 10pt;
 }
 ol,ul {
-	margin: 0;
+  margin: 0;
 }
 table td,table th {
-	padding: 0
+  padding: 0
 }
 h1+p {
-	padding-top: 0pt;
-	padding-bottom: 0pt;
-	text-align: right;
-	margin-right: -1.5pt;
-	display: inline-block;
-	float: right;
+  padding-top: 0pt;
+  padding-bottom: 0pt;
+  text-align: right;
+  margin-right: -1.5pt;
+  display: inline-block;
+  float: right;
 }
 a {
-	text-decoration-skip-ink: none;
-	-webkit-text-decoration-skip: none;
-	color: var(--blue);
-	text-decoration: underline
+  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip: none;
+  color: var(--blue);
+  text-decoration: underline
 }
 h1 {
-	padding-top: 0pt;
-	color: var(--blue);
-	font-weight: 700;
-	font-size: 18pt;
-	padding-bottom: 10pt;
-	line-height: 1.0;
-	text-align: left;
-	margin-right: -0.8pt
-	break-after:column;
-	display: inline-block;
+  padding-top: 0pt;
+  color: var(--blue);
+  font-weight: 700;
+  font-size: 18pt;
+  padding-bottom: 10pt;
+  line-height: 1.0;
+  text-align: left;
+  margin-right: -0.8pt
+  break-after:column;
+  display: inline-block;
 }
 li {
-	line-height: 1.15;
+  line-height: 1.15;
 }
 p {
-	margin: 0;
+  margin: 0;
+}
+
+#color_toggle_text::before {
+  content:'\263E';
+}
+
+.dark #color_toggle_text::before {
+  content:'\2600';
 }
